--- a/main.css
+++ b/main.css
@@ -397,6 +397,37 @@ form a{
     right: 10px;
 }
 
+
+/* ------------star rating --------- */
+.rating {
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
+
+.rating li{
+    list-style-type: none;
+}
+.rating-item{
+    border: 1px solid #fff;
+    cursor: pointer;
+    font-size: 2em;
+    color: #ff8c1a;
+}
+
+.rating-item::before{
+    content: "\2605";
+}
+
+.rating-item.active ~ .rating-item::before{
+    content: "\2606";
+}
+.rating:hover .rating-item::before{
+    content: "\2605";
+}
+.rating-item:hover ~ .rating-item::before{
+    content: "\2606";
+}
 /* ---------- shoppingCart -------  */
 
 .cart-page{
